--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,7 +1,8 @@
 .footer {
-    background-color:  #353a40;
+   /* background-color:  #353a40;*/
     
     display: flex;
+    justify-content:space-evenly;
     width: 100%;
     padding: 15px 5%;
     font-weight: bold;
